RAD-IO2 Arduino Example/neoRADIO2/neoRADIO2_Interface/neoRADIO2_frames.h

typedef struct _neoRADIO2_SettingsPart {
	uint8_t part;
	uint8_t data[NEORADIO2_SETTINGS_PARTSIZE];
} neoRADIO2_SettingsPart;