src/ffi.rs

pub type neoRADIO2_SettingsPart = _neoRADIO2_SettingsPart;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame_SetBaudrate {
    pub baud: u32,
}
pub type neoRADIO2frame_SetBaudrate = _neoRADIO2frame_SetBaudrate;
pub const _neoRADIO2_LEDMode_LEDMODE_OFF: _neoRADIO2_LEDMode = 0;
pub const _neoRADIO2_LEDMode_LEDMODE_ON: _neoRADIO2_LEDMode = 1;
pub const _neoRADIO2_LEDMode_LEDMODE_BLINK_ONCE: _neoRADIO2_LEDMode = 2;
pub const _neoRADIO2_LEDMode_LEDMODE_BLINK_DURATION_MS: _neoRADIO2_LEDMode = 3;
pub type _neoRADIO2_LEDMode = ::std::os::raw::c_int;
pub use self::_neoRADIO2_LEDMode as neoRADIO2_LEDMode;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2_PerfStatistics {
    pub comm_timeout_reset_cnt: u8,
    pub cmd_process_time_ms: u16,
    pub max_cmd_process_time_ms: u8,
    pub bytes_rx: u32,
    pub bytes_tx: u32,
    pub ignored_rx: u16,
    pub checksum_error_cnt: u16,
    pub last_cmd: u8,
    pub buffer_current: u8,
    pub buffer_max: u8,
    pub _reserved: [u8; 10usize],
}
pub type neoRADIO2_PerfStatistics = _neoRADIO2_PerfStatistics;
#[repr(C)]
#[derive(Copy, Clone)]
pub union _neoRADIO2AOUT_header {
    pub byte: u8,
    pub bits: _neoRADIO2AOUT_header__bindgen_ty_1,
}
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2AOUT_header__bindgen_ty_1 {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
    pub __bindgen_padding_0: [u8; 3usize],
}
impl _neoRADIO2AOUT_header__bindgen_ty_1 {
    #[inline]
    pub fn ch1(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ch1(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn ch2(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ch2(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn ch3(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ch3(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn reserved(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(3usize, 4u8) as u32) }
    }
    #[inline]
    pub fn set_reserved(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(3usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn noCal(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(7usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_noCal(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(7usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        ch1: ::std::os::raw::c_uint,
        ch2: ::std::os::raw::c_uint,
        ch3: ::std::os::raw::c_uint,
        reserved: ::std::os::raw::c_uint,
        noCal: ::std::os::raw::c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let ch1: u32 = unsafe { ::std::mem::transmute(ch1) };
            ch1 as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let ch2: u32 = unsafe { ::std::mem::transmute(ch2) };
            ch2 as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let ch3: u32 = unsafe { ::std::mem::transmute(ch3) };
            ch3 as u64
        });
        __bindgen_bitfield_unit.set(3usize, 4u8, {
            let reserved: u32 = unsafe { ::std::mem::transmute(reserved) };
            reserved as u64
        });
        __bindgen_bitfield_unit.set(7usize, 1u8, {
            let noCal: u32 = unsafe { ::std::mem::transmute(noCal) };
            noCal as u64
        });
        __bindgen_bitfield_unit
    }
}
pub type neoRADIO2AOUT_header = _neoRADIO2AOUT_header;
#[repr(C)]
#[derive(Copy, Clone)]
pub union _neoRADIO2AOUT_channelConfig {
    pub u32_: u32,
    pub data: _neoRADIO2AOUT_channelConfig__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2AOUT_channelConfig__bindgen_ty_1 {
    pub initOutputValue: u16,
    pub initEnabled: u8,
    pub enabled: u8,
}
pub type neoRADIO2AOUT_channelConfig = _neoRADIO2AOUT_channelConfig;
pub const _CommandStatus_StatusInProgress: _CommandStatus = 0;
pub const _CommandStatus_StatusFinished: _CommandStatus = 1;
pub const _CommandStatus_StatusError: _CommandStatus = 2;
pub type _CommandStatus = ::std::os::raw::c_int;
pub use self::_CommandStatus as CommandStatus;
pub const _CommandStateType_CommandStateHost: _CommandStateType = 0;
pub const _CommandStateType_CommandStateDevice: _CommandStateType = 1;
pub const _CommandStateType_CommandStateUnknown: _CommandStateType = -1;
pub type _CommandStateType = ::std::os::raw::c_int;
pub use self::_CommandStateType as CommandStateType;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Neoradio2DeviceInfo {
    pub name: [::std::os::raw::c_char; 64usize],
    pub serial_str: [::std::os::raw::c_char; 64usize],
    pub vendor_id: ::std::os::raw::c_int,
    pub product_id: ::std::os::raw::c_int,
    pub _reserved: [u8; 32usize],
}
pub type Neoradio2DeviceInfo = _Neoradio2DeviceInfo;
pub const _StatusType_StatusChain: _StatusType = 0;
pub const _StatusType_StatusAppStart: _StatusType = 1;
pub const _StatusType_StatusPCBSN: _StatusType = 2;
pub const _StatusType_StatusSensorRead: _StatusType = 3;
pub const _StatusType_StatusSensorWrite: _StatusType = 4;
pub const _StatusType_StatusSettingsRead: _StatusType = 5;
pub const _StatusType_StatusSettingsWrite: _StatusType = 6;
pub const _StatusType_StatusCalibration: _StatusType = 7;
pub const _StatusType_StatusCalibrationPoints: _StatusType = 8;
pub const _StatusType_StatusCalibrationStored: _StatusType = 9;
pub const _StatusType_StatusCalibrationInfo: _StatusType = 10;
pub const _StatusType_StatusLedToggle: _StatusType = 11;
pub const _StatusType_StatusMax: _StatusType = 12;
pub type _StatusType = ::std::os::raw::c_int;
pub use self::_StatusType as StatusType;
extern "C" {
    pub fn neoradio2_set_blocking(
        blocking: ::std::os::raw::c_int,
        ms_timeout: ::std::os::raw::c_longlong,
    );
}
extern "C" {
    pub fn neoradio2_find(
        devices: *mut Neoradio2DeviceInfo,
        device_count: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_is_blocking() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_open(
        handle: *mut ::std::os::raw::c_long,
        device: *mut Neoradio2DeviceInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_is_opened(
        handle: *mut ::std::os::raw::c_long,
        is_opened: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_close(handle: *mut ::std::os::raw::c_long) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_is_closed(
        handle: *mut ::std::os::raw::c_long,
        is_closed: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_chain_is_identified(
        handle: *mut ::std::os::raw::c_long,
        is_identified: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_chain_identify(handle: *mut ::std::os::raw::c_long) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_app_is_started(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        is_started: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_app_start(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_enter_bootloader(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_serial_number(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        serial_number: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_manufacturer_date(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        year: *mut ::std::os::raw::c_int,
        month: *mut ::std::os::raw::c_int,
        day: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_firmware_version(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        major: *mut ::std::os::raw::c_int,
        minor: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_hardware_revision(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        major: *mut ::std::os::raw::c_int,
        minor: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_device_type(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        device_type: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_pcbsn(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_get_pcbsn(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        pcb_sn: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_request_sensor_data(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        enable_cal: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_sensor_float(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        value: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_read_sensor_array(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        arr: *mut ::std::os::raw::c_int,
        arr_size: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_sensor(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
        data: *mut u8,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn neoradio2_write_sensor_successful(
        handle: *mut ::std::os::raw::c_long,
        device: ::std::os::raw::c_int,
        bank: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
